Exposed color choosing, opacity choosing, fixed overflow of container issue

--- a/assets/css/src/style.less
+++ b/assets/css/src/style.less
@@ -1,4 +1,4 @@
-.plugincomp {
+.chart-wrapper {
   font-family: "Helvetica Neue", Helvetica, SansSerif;
   position: relative;
   overflow: auto;
